# sword

./: CMakeLists.txt
tflite/: CMakeLists.txt  README.md  aarch64-android.toolchain.cmake  aarch64_api26_stllibcxx_profile.sh
